--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 
 Body{
 
-  background-image: url('../img/fundo.jpg');
+  background-image: url('../img/IT-nanoni-Korab-Thaci-1.png');
   background-size: auto 100vh;
   font-family: Calibri (Corpo); 
   height: 100vh;
